apps/openresume/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-resume
  name: http
  namespace: open-resume
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: open-resume
