apps/openresume/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-ovh
        kubernetes.io/ingress.class: nginxinc
    labels:
        app: open-resume
    name: open-resume
    namespace: open-resume
spec:
    rules:
        - host: ENC[AES256_GCM,data:Ja+7xKZv+VPZFf8U8oY1qGrzSoQ=,iv:kVPQijRu6lpd2zwidxd52lE2dRtWDivLaR+QzQa9yR4=,tag:t+EPkrIFxXpIovu9NXUoeQ==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: http
                        port:
                            number: 3000
                  path: /
                  pathType: Prefix
    tls:
        - hosts:
            - ENC[AES256_GCM,data:pPQSHRzNuCi5AUvrGRxUF0lSnwU=,iv:bkMxob2FKOIt4h55VNxXpopqpKzfBWLh9nOGfvKvch8=,tag:QMBGUwnx5ctguuHjX2lw5Q==,type:str]
          secretName: open-resume-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2025-08-02T22:22:39Z"
    mac: ENC[AES256_GCM,data:JUUmZBK6o+Q+1sKkY9/UzQWuSD8Q88gNdPpWx7cTGtiHhfvn/Nb1YNl+p6EZQhOSe8F7Ema1gxbbaFdjuSNBpeEXJIMPFqZ2RgD6hPaEyRDaAIK68YyPwX9al1kuEAVlQ672jOfZcjGxUJM9Vou2O2TTo9fylPGjNjUurjefdrM=,iv:8pVo/gywBAgI5bwOs6k21D3oDcHJ4+AmWYLqVU0D33Y=,tag:3/DcSsLj4ugG2auEhqItzg==,type:str]
    pgp:
        - created_at: "2025-08-02T22:22:39Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ//TvCszJ0fT5g3Gkrpcodu70WIwBss3xEVq4sAcyMZp5sj
[...]
            Z9kENipsb8LBfvSpKsdGG/Uo/aylZqF1fbPaOPH12Xi9WNHs8S+j
            =KlTT
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.9.0
